welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: '(' expected but identifier found.
    if estFaceMur return false
       ^SlugTracking:8: error: illegal start of simple expression
}        
^